...
  socks,
  shoes,
  bagAccessory;

  String get label => switch (this) {
        ClothingCategory.hat => '모자',
        ClothingCategory.onePiece => '한벌옷',
        ClothingCategory.top => '상의',
        ClothingCategory.outer => '아우터',
        ClothingCategory.bottom => '하의',
        ClothingCategory.socks => '양말',
        ClothingCategory.shoes => '신발',
        ClothingCategory.bagAccessory => '가방·액세서리',
...
